objects/OrganizationStakeholdersForCR__c.object
<CustomObject>
    <description>I2P: APRIL 2014 Release</description>
    <fields>
        <fullName>AdditionalInformation__c</fullName>
        <label>Additional Information</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactEmail__c</fullName>
        <label>Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organization__c</fullName>
        <label>Organization</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>BusinessRiskEscalationEntity__c.Location_Type__c</field>
                <operation>notEqual</operation>
                <value>Customer Care Center</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>BusinessRiskEscalationEntity__c</referenceTo>
        <relationshipLabel>Complaint/Request Stakeholders</relationshipLabel>
        <relationshipName>OrganizationStakeholdersForCR</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>OrganizationStakeholdersforCR</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Complaint/Request Creator</fullName>
                </value>
                <value>
                    <fullName>Complaint/Request Owner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TECH_UniqueRole__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>TECH_UniqueRole</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Complaint/Request Stakeholder</label>
    <nameField>
        <displayFormat>CRS-{0000}</displayFormat>
        <label>Organization Stakeholder Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Complaint/Request Stakeholders</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>OSCR_VR01_OwnerAndRoleCannotBeBlank</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
$User.BypassVR__c=False,
 Owner__c=Null,
  ContactEmail__c =&apos;&apos;
)</errorConditionFormula>
        <errorMessage>Either Owner or Contact Email should be available, both cannot be blank.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>OSCR_VR_JUN16RR01_CheckSafeDomain</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT($User.BypassVR__c), 
 VLOOKUP($ObjectType.SafeDomains__c.Fields.Name, $ObjectType.SafeDomains__c.Fields.Name,SUBSTITUTE(ContactEmail__c,left(ContactEmail__c,FIND(&quot;@&quot;, ContactEmail__c)), &quot;&quot;))!=SUBSTITUTE(ContactEmail__c,left(ContactEmail__c,FIND(&quot;@&quot;, ContactEmail__c)), &quot;&quot;) )</errorConditionFormula>
        <errorDisplayField>ContactEmail__c</errorDisplayField>
        <errorMessage>Please enter valid email address within a Schneider safe domain.</errorMessage>
    </validationRules>
</CustomObject>